# FlappyBird

./: .gitignore  CMakeLists.txt  README.md
include/: Bird.h  DifficultyManager.h  Game.h  Pipe.h  PipeManager.h
src/: Bird.cpp  DifficultyManager.cpp  Game.cpp  Pipe.cpp  PipeManager.cpp
